change to log images

--- a/log.html
+++ b/log.html
@@ -61,7 +61,7 @@
       </h2>
       <p><i>wood species unkown</i></p>
     </div>
-    <img src="images/projects/misc_visual/log/_DSC2647-Edit.jpg" class="centertall">
+    <img src="images/projects/misc_visual/log/_DSC2647-Edit.JPG" class="centertall">
     <img src="images/projects/misc_visual/log/_DSC2648-Edit.jpg" class="centertall">
     <img src="images/projects/misc_visual/log/_DSC2650-Edit.jpg" class="centertall">
     <img src="images/projects/misc_visual/log/_DSC2745.jpg" class="centertall">
