added lower bar text

--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
       </ul>
     </div>
   </nav> 
+  <div style="position:fixed; top: 1000px;">
+    This website designed and coded by Trevor Chan
+  </div>
+
 
   <!--fade in slide in up transition-->
   <div class="m-right-panel m-page scene_element scene_element--fadeinup">
