minor changes to image sizes, work order

--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
       </ul>
     </div>
   </nav> 
-  <div style="position:fixed; top: 1000px;">
+  <div style="position:fixed; bottom: 20px; right:20px; color: #333; background-color: #fff; 
+              opacity: .8; z-index: 1000; padding-left: 5px; padding-right: 5px;">
     This website designed and coded by Trevor Chan
   </div>
 
