--- a/van.html
+++ b/van.html
@@ -65,6 +65,7 @@
         A folding cot, stove, and toilet stow into compartments under the planter beds.
       </p>
     </div>
+    <img src="images/projects/van/IMG_4677.jpg" class="centerbasic">
     <img src="images/projects/van/page4image56606720 copy.png" class="centerbasic">
     <img src="images/projects/van/53A18BE5-EED1-476D-9BDF-95FFDBE3879E.jpeg" class="centerbasic">
 
