--- a/web_portfolio.html
+++ b/web_portfolio.html
@@ -63,7 +63,7 @@
       </h2>
       
       <p>
-        The design (HTML and CSS) of this website was written by me. Page transitions utilize a Miguel Perez javascript plugin JS smoothstate. 
+        The design (HTML, CSS, select JS) of this website was written by me. Page transitions utilize a Miguel Perez javascript plugin JS smoothstate. 
         Complete code can be viewed on github <a href="https://github.com/trevor-chan/trevor-chan.github.io">[here]</a>.
       </p>
     </div>
