--- a/work.html
+++ b/work.html
@@ -49,6 +49,10 @@
       </ul>
     </div>
   </nav> 
+  <div style="position:fixed; bottom: 20px; right:20px; color: #333; background-color: #fff; 
+              opacity: .8; z-index: 1000; padding-left: 5px; padding-right: 5px;">
+    This website designed and coded by Trevor Chan
+  </div>
 
 
   <!--fade in slide in up transition-->
@@ -96,17 +100,17 @@
           </div>
         </div>
         <!--item end-->
-        <!--item start-->     <!--arch/eng-->
+        <!--item start-->     <!--cs-->
         <div class="col-md-4 portfolio-item">
-          <div class="hover-bg"> <a href="campsite_struct.html"  data-lightbox-gallery="gallery1">
+          <div class="hover-bg"> <a href="web_portfolio.html"  data-lightbox-gallery="gallery1">
             <div class="hover-text">
               <div class="overlay-caption">
                 <div class="overlay-content">
-                  <h3>Campsite Kit</h3>
+                  <h3>Website portfolio</h3>
                 </div>
               </div>
             </div>
-            <img src="images/projects/nomad_campsite/axon plan.jpg" class="img-responsive imclip" alt=""></a>
+            <img src="images/projects/website/Screen Shot 2020-10-04 at 12.02.59 AM.png" class="img-responsive imclip" alt=""></a>
           </div>
         </div>
         <!--item end-->
@@ -148,7 +152,7 @@
                 </div>
               </div>
             </div>
-            <img src="images/projects/escuelaSUP/CommunityCenter4.png" class="img-responsive imclip" alt=""></a>
+            <img src="images/projects/escuelaSUP/ESUP_small.jpg" class="img-responsive imclip" alt=""></a>
           </div>
         </div>
         <!--item end-->
@@ -177,20 +181,6 @@
               </div>
             </div>
             <img src="images/projects/baseball_clubhouse/sectioncollage1final.jpg" class="img-responsive imclip" alt=""></a>
-          </div>
-        </div>
-        <!--item end-->
-        <!--item start-->     <!--cs-->
-        <div class="col-md-4 portfolio-item">
-          <div class="hover-bg"> <a href="web_portfolio.html"  data-lightbox-gallery="gallery1">
-            <div class="hover-text">
-              <div class="overlay-caption">
-                <div class="overlay-content">
-                  <h3>Website portfolio</h3>
-                </div>
-              </div>
-            </div>
-            <img src="images/projects/website/Screen Shot 2020-10-04 at 12.02.59 AM.png" class="img-responsive imclip" alt=""></a>
           </div>
         </div>
         <!--item end-->
@@ -232,7 +222,21 @@
                 </div>
               </div>
             </div>
-            <img src="images/projects/community_garden/IMG_1821-Edit.jpg" class="img-responsive imclip" alt=""></a>
+            <img src="images/projects/community_garden/comm_garden_small.jpg" class="img-responsive imclip" alt=""></a>
+          </div>
+        </div>
+        <!--item end-->
+        <!--item start-->     <!--arch/eng-->
+        <div class="col-md-4 portfolio-item">
+          <div class="hover-bg"> <a href="campsite_struct.html"  data-lightbox-gallery="gallery1">
+            <div class="hover-text">
+              <div class="overlay-caption">
+                <div class="overlay-content">
+                  <h3>Campsite Kit</h3>
+                </div>
+              </div>
+            </div>
+            <img src="images/projects/nomad_campsite/axon plan.jpg" class="img-responsive imclip" alt=""></a>
           </div>
         </div>
         <!--item end-->
@@ -302,7 +306,7 @@
                 </div>
               </div>
             </div>
-            <img src="images/projects/lunchbox/IMG_1843-Edit.jpg" class="img-responsive imclip" alt=""></a>
+            <img src="images/projects/lunchbox/lunchbox_small.jpg" class="img-responsive imclip" alt=""></a>
           </div>
         </div>
         <!--item end-->
