--- a/work.eng.html
+++ b/work.eng.html
@@ -49,7 +49,10 @@
       </ul>
     </div>
   </nav> 
-
+  <div style="position:fixed; bottom: 20px; right:20px; color: #333; background-color: #fff; 
+              opacity: .8; z-index: 1000; padding-left: 5px; padding-right: 5px;">
+    This website designed and coded by Trevor Chan
+  </div>
 
   <!--fade in slide in up transition-->
   <div class="m-right-panel m-page scene_element scene_element--fadeinup">
@@ -120,7 +123,7 @@
                 </div>
               </div>
             </div>
-            <img src="images/projects/escuelaSUP/CommunityCenter4.png" class="img-responsive imclip" alt=""></a>
+            <img src="images/projects/escuelaSUP/ESUP_small.jpg" class="img-responsive imclip" alt=""></a>
           </div>
         </div>
         <!--item end-->
