added machine learning project and files

--- a/work.cs.html
+++ b/work.cs.html
@@ -99,6 +99,20 @@
           </div>
         </div>
         <!--item end-->
+        <!--item start-->     <!--cs/eng-->
+        <div class="col-md-4 portfolio-item">
+          <div class="hover-bg"> <a href="machine_learning.html"  data-lightbox-gallery="gallery1">
+            <div class="hover-text">
+              <div class="overlay-caption">
+                <div class="overlay-content">
+                  <h3>Machine Learning</h3>
+                </div>
+              </div>
+            </div>
+            <img src="images/projects/machine_learning/07_96_2470_gt.jpg" class="img-responsive imclip" alt=""></a>
+          </div>
+        </div>
+        <!--item end-->
         <!--item start-->     <!--eng/cs-->
         <div class="col-md-4 portfolio-item">
           <div class="hover-bg"> <a href="quadruped.html"  data-lightbox-gallery="gallery1">
