added rand to misc

--- a/rand.html
+++ b/rand.html
@@ -66,7 +66,14 @@
     <img src="images/projects/misc_visual/rand/IMG_3556.png" class="centerbasic">
     <img src="images/projects/misc_visual/rand/IMG_3722.jpg" class="centerbasic">
     <img src="images/projects/misc_visual/rand/IMG_1293.JPG" class="centerbasic">
-
+    <div class="centerbasic">
+      <h2>
+        Trevor's Hidden Blog Section
+      </h2>
+      <p>
+        you got me, this is actually a page for me to show my blog posts. Many thanks to my architecture mother Kristine
+      </p>
+    </div>
     <!-- end content -->
   </div>
 </div>
