changed housing image names

--- a/log.html
+++ b/log.html
@@ -55,7 +55,7 @@
     <h4 style="margin-top:60px;margin-bottom:-60px;margin-left:30px;"><a href="work.misc.html">&#8592; projects</a></h4>
 
     <img src="images/projects/misc_visual/log/towers2small.gif" class="centertall">
-    <div class="centerbasic">
+    <div class="centertall">
       <h2>
         The Log
       </h2>
