--- a/campsite_gen.html
+++ b/campsite_gen.html
@@ -88,7 +88,7 @@
       </p>
     </div>
     <img src="images/projects/nomad_campsite/BurningManRenderPNG.png" class="centerbasic">
-    <div class="centercaption">Rendering of bare structure placement in the Black Rock Desert, Nv during the Burning Man Festival</div>
+    <div class="centercaption">Rendering of bare structure placement in the Black Rock Desert, NV during the Burning Man Festival</div>
 
     <div class="centerbasic">
       <p>
