--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   </nav> 
   <div style="position:fixed; bottom: 20px; right:20px; color: #333; background-color: #fff; 
               opacity: .8; z-index: 1000; padding-left: 5px; padding-right: 5px;">
-    This website designed and coded by Trevor Chan
+    This website was designed and coded by Trevor Chan
   </div>
 
 
@@ -77,14 +77,14 @@
       
       <p>
         Trevor Chan is an engineer and designer from Oakland, CA. 
-        He graduated Yale University in 2020, where he obtained degrees in mechanical engineering and architecture. 
-        Currently, he works at the Mak Research Lab at Yale, where he investigates cancer cell mechanobiology. 
+        He obtained his bachelor's degrees in mechanical engineering and architecture from Yale in May 2020. 
+        He currently investigates cancer cell mechanobiology in Yale's Mak Research Group.
       </p>
       <p>
-        He has worked on numerous projects, spanning a wide range of disciplines. 
-        These include planning an elementary school renovation focused on energy sustainability and resilience for the U.S. Department of Energy Solar Decathlon Challenge, 
-        collaborating with orthopedic surgeons in the Yale Medical School to design an original surgical retractor for foot and ankle surgery, 
-        and employing AI to segment brightfield images and characterize mechanical behaviors of  cancer cell lineages.
+        Trevor's projects to-date span a wide range of disciplines. 
+        Selected contributions include: planning an elementary school renovation focused on energy sustainability and resilience for the U.S. Department of Energy Solar Decathlon Challenge, 
+        collaborating with the Orthopedics Department at the Yale School of Medicine to design a surgical retractor for foot and ankle operations, 
+        and employing AI to extract mechanical properties of cancer cell lines from brightfield microscopy images.
       </p>
     </div>
     <div class="centerbasic" style="margin-top:50px;">
