--- a/machine_learning.html
+++ b/machine_learning.html
@@ -68,6 +68,8 @@
         From the segmentation output, single cell morphological properties and cell network properties can be measured. Fractal dimension is calculated from the binarized segmentation output,
         and graph properties are calculated from a node&edge representation of the cell network. 
         Hierarchical clustering is performed on characterized cell populations in order to identify phenotypically distinct lineages.
+        Complete code can be viewed on github: <a href="https://github.com/ericryanchan/cell-instance-segmentation">[CNN segmentation]</a> 
+        <a href="https://github.com/trevor-chan/research/tree/master/morpho_scripts">[morphological analysis]</a>.
       </p>
     </div>
 
