--- a/parallax.html
+++ b/parallax.html
@@ -61,8 +61,8 @@
       </h2>
       <p>
         A novel application of alternate reality to facilitate more seamless melding of physical and virtual space. 
-        Through facial tracking and virtual distortion, 
-        perspective shifts resulting from movement of the subject in the physical space are translated into corresponding movement and distortion of the camera in the virtual space, 
+        Through facial tracking and virtual distortion, perspective shifts resulting from movement of the subject 
+        in the physical space are translated into corresponding movement and distortion of the camera in the virtual space, 
         providing an illusion of continuity between the physical world and the virtual one displayed on screen.
       </p>
     </div>
