--- a/quadruped.html
+++ b/quadruped.html
@@ -62,8 +62,8 @@
       </h2>
       
       <p>
-        12 degree-of-freedom quadruped robot capable of emulating canane gait, 
-        developed as an independent collaboration of students from Yale, Stanford, and the University of Maryland.
+        12 degree-of-freedom quadruped robot capable of emulating canine gait, 
+        developed as an independent project.
       </p>
       <p>
         The robot is entirely custom designed and 3D printed to provide a lightweight, inexpensive, and easily modified frame.
