--- a/work.arch.html
+++ b/work.arch.html
@@ -51,7 +51,7 @@
   </nav> 
   <div style="position:fixed; bottom: 20px; right:20px; color: #333; background-color: #fff; 
               opacity: .8; z-index: 1000; padding-left: 5px; padding-right: 5px;">
-    This website designed and coded by Trevor Chan
+    This website was designed and coded by Trevor Chan
   </div>
 
 
@@ -62,7 +62,7 @@
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <ul class="nav navbar-nav navbar-lower">
-          <li><a href="work.html">all</a></li>
+          <li><a href="work.html">selected</a></li>
           <li class="active"><a href="work.arch.html">architecture</a></li>        
           <li><a href="work.eng.html">engineering</a></li>
           <li><a href="work.cs.html">programming</a></li>
@@ -176,7 +176,7 @@
             <div class="hover-text">
               <div class="overlay-caption">
                 <div class="overlay-content">
-                  <h3>Nature center</h3>
+                  <h3>Nature Center</h3>
                 </div>
               </div>
             </div>
