--- a/log.html
+++ b/log.html
@@ -59,7 +59,7 @@
       <h2>
         The Log
       </h2>
-      <p><i>wood species unkown</i></p>
+      <p><i>wood species unknown</i></p>
     </div>
     <img src="images/projects/misc_visual/log/bark1.jpg" class="centertall">
     <img src="images/projects/misc_visual/log/bark2.jpg" class="centertall">
