image adds/swaps

--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
   <!--fade in slide in up transition-->
   <div class="m-right-panel m-page scene_element scene_element--fadeinup">
     <div class="pic-ctn">
-      <img src="images/photos/JapanPhotos/IMG_2145.jpg" alt="" class="pic" style="object-fit:cover;width:500px;height:500px;overflow: hidden;">
-      <img src="images/photos/misc/flames.JPG" alt="" class="pic" style="object-fit:cover;width:500px;height:500px;overflow: hidden;">
-      <img src="images/photos/misc/IMG_0202.JPG" alt="" class="pic" style="object-fit:cover;width:500px;height:500px;overflow: hidden;">
-      <img src="images/photos/misc/IMG_2956.JPG" alt="" class="pic" style="object-fit:cover;width:500px;height:500px;overflow: hidden;">
-      <img src="images/photos/JapanPhotos/IMG_2119.jpg" alt="" class="pic" style="object-fit:cover;width:500px;height:500px;overflow: hidden;">
+      <img src="images/projects/quadruped/full.png" alt="" class="pic" style="object-fit:cover;width:500px;height:500px;overflow: hidden;">
+      <img src="images/projects/nomad_campsite/EstacionDeltaSite10C.png" alt="" class="pic" style="object-fit:cover;width:500px;height:500px;overflow: hidden;">
+      <img src="images/projects/nature_center/IMG_3267.jpg" alt="" class="pic" style="object-fit:cover;width:500px;height:500px;overflow: hidden;">
+      <img src="images/projects/surgical_retractor/AAClampV5_10.PNG" alt="" class="pic" style="object-fit:cover;width:500px;height:500px;overflow: hidden;">
+      <img src="images/projects/van/C893012A-0C4B-4233-9551-79BA62B0D535.jpeg" alt="" class="pic" style="object-fit:cover;width:500px;height:500px;overflow: hidden;">
     </div>
 
     <div class="centerbasic" style="margin-top:230px;">
