--- a/quadruped.html
+++ b/quadruped.html
@@ -72,9 +72,10 @@
         An original meta-learning approach was employed to speed training.
       </p>
     </div>
-
+    <img src="images/projects/quadruped/iktest.gif" class="centerbasic">
     <img src="images/projects/quadruped/leg.png" class="centerbasic">
     <img src="images/projects/quadruped/hip.png" class="centerbasic">
+    <img src="images/projects/quadruped/printed_casing.jpg" class="centerbasic">
 
     <!-- end content -->
   </div>
