changed main projects page to include all projects

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 
  <!-- jQuery library -->
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
- 
+
  <!-- Latest compiled JavaScript -->
- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> 
+ <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
 <!-- JS smoothstate -->
 <script src="js/jquery.smoothState.min.js"></script>
 <script src="js/js_smooth_transition.js"></script>
-<script type="text/javascript" src="js/SmoothScroll.js"></script> 
+<script type="text/javascript" src="js/SmoothScroll.js"></script>
 <link rel="stylesheet" href="css/keyframes.css">
 <link rel="stylesheet" href="css/pageTransitions.css">
 
@@ -49,15 +49,15 @@
       </div>
       <ul class="nav navbar-nav navbar-right">
         <li class="active"><a href="index.html">about</a></li>
-        <li><a href="work.html">work</a></li>        
+        <li><a href="work.html">work</a></li>
         <li><a href="/pdf/TrevorChanCV.pdf" target="_blank">cv</a></li>
       </ul>
     </div>
-  </nav> 
-  <div style="position:fixed; bottom: 20px; right:20px; color: #333; background-color: #fff; 
+  </nav>
+  <!-- <div style="position:fixed; bottom: 20px; right:20px; color: #333; background-color: #fff; 
               opacity: .8; z-index: 1000; padding-left: 5px; padding-right: 5px;">
     This website was designed and coded by Trevor Chan
-  </div>
+  </div> -->
 
 
   <!--fade in slide in up transition-->
@@ -74,16 +74,16 @@
       <h3>
           About me
       </h3>
-      
+
       <p>
-        Trevor Chan is an engineer and designer from Oakland, CA. 
-        He obtained his bachelor's degrees in mechanical engineering and architecture from Yale in May 2020. 
+        Trevor Chan is an engineer and designer from Oakland, CA.
+        He obtained his bachelor's degrees in mechanical engineering and architecture from Yale in May 2020.
         He currently investigates cancer cell mechanobiology in Yale's Mak Research Group.
       </p>
       <p>
-        Trevor's projects to-date span a wide range of disciplines. 
-        Selected contributions include: planning an elementary school renovation focused on energy sustainability and resilience for the U.S. Department of Energy Solar Decathlon Challenge, 
-        collaborating with the Orthopedics Department at the Yale School of Medicine to design a surgical retractor for foot and ankle operations, 
+        Trevor's projects to-date span a wide range of disciplines.
+        Selected contributions include: planning an elementary school renovation focused on energy sustainability and resilience for the U.S. Department of Energy Solar Decathlon Challenge,
+        collaborating with the Orthopedics Department at the Yale School of Medicine to design a surgical retractor for foot and ankle operations,
         and employing AI to extract mechanical properties of cancer cell lines from brightfield microscopy images.
       </p>
     </div>
@@ -94,7 +94,7 @@
       <p>phone: (510) 999 2031</p>
       <p>email: trevor.chan@yale.edu</p>
       <p>github: <a href="https://github.com/trevor-chan">trevor-chan</a> </p>
-    </div>  
+    </div>
 
   </div>
 </div>
