--- a/work.eng.html
+++ b/work.eng.html
@@ -14,14 +14,14 @@
 
  <!-- jQuery library -->
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
- 
+
  <!-- Latest compiled JavaScript -->
- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> 
+ <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
 <!-- JS smoothstate -->
 <script src="js/jquery.smoothState.min.js"></script>
 <script src="js/js_smooth_transition.js"></script>
-<script type="text/javascript" src="js/SmoothScroll.js"></script> 
+<script type="text/javascript" src="js/SmoothScroll.js"></script>
 <link rel="stylesheet" href="css/keyframes.css">
 <link rel="stylesheet" href="css/pageTransitions.css">
 
@@ -43,16 +43,16 @@
         <a class="navbar-brand" href="index.html">trevor chan</a>
       </div>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="index.html">about</a></li>        
+        <li><a href="index.html">about</a></li>
         <li class="active"><a href="work.html">work</a></li>
         <li><a href="/pdf/TrevorChanCV.pdf" target="_blank">cv</a></li>
       </ul>
     </div>
-  </nav> 
-  <div style="position:fixed; bottom: 20px; right:20px; color: #333; background-color: #fff; 
+  </nav>
+  <!-- <div style="position:fixed; bottom: 20px; right:20px; color: #333; background-color: #fff; 
               opacity: .8; z-index: 1000; padding-left: 5px; padding-right: 5px;">
     This website was designed and coded by Trevor Chan
-  </div>
+  </div> -->
 
   <!--fade in slide in up transition-->
   <div class="m-right-panel m-page scene_element scene_element--fadeinup">
@@ -62,13 +62,13 @@
       <div class="container-fluid">
         <ul class="nav navbar-nav navbar-lower">
           <li><a href="work.html">selected</a></li>
-          <li><a href="work.arch.html">architecture</a></li>        
+          <li><a href="work.arch.html">architecture</a></li>
           <li class="active"><a href="work.eng.html">engineering</a></li>
           <li><a href="work.cs.html">programming</a></li>
           <li><a href="work.misc.html">visual</a></li>
         </ul>
       </div>
-    </nav> 
+    </nav>
 
     <div class="row">
         <!--item start-->     <!--eng-->
@@ -169,7 +169,7 @@
           </div>
         </div>
         <!--item end-->
-        
+
     </div>
 
     <!--portfolio end-->
