--- a/work.selected.html
+++ b/work.selected.html
@@ -14,14 +14,14 @@
 
  <!-- jQuery library -->
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
+ 
  <!-- Latest compiled JavaScript -->
- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+ <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> 
 
 <!-- JS smoothstate -->
 <script src="js/jquery.smoothState.min.js"></script>
 <script src="js/js_smooth_transition.js"></script>
-<script type="text/javascript" src="js/SmoothScroll.js"></script>
+<script type="text/javascript" src="js/SmoothScroll.js"></script> 
 <link rel="stylesheet" href="css/keyframes.css">
 <link rel="stylesheet" href="css/pageTransitions.css">
 
@@ -43,16 +43,16 @@
         <a class="navbar-brand" href="index.html">trevor chan</a>
       </div>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="index.html">about</a></li>
+        <li><a href="index.html">about</a></li>        
         <li class="active"><a href="work.html">work</a></li>
         <li><a href="/pdf/TrevorChanCV.pdf" target="_blank">cv</a></li>
       </ul>
     </div>
-  </nav>
-  <!-- <div style="position:fixed; bottom: 20px; right:20px; color: #333; background-color: #fff; 
+  </nav> 
+  <div style="position:fixed; bottom: 20px; right:20px; color: #333; background-color: #fff; 
               opacity: .8; z-index: 1000; padding-left: 5px; padding-right: 5px;">
     This website was designed and coded by Trevor Chan
-  </div> -->
+  </div>
 
 
   <!--fade in slide in up transition-->
@@ -62,14 +62,14 @@
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <ul class="nav navbar-nav navbar-lower">
-          <li><a href="work.html">selected</a></li>
-          <li class="active"><a href="work.arch.html">architecture</a></li>
+          <li class="active"><a href="work.html">selected</a></li>
+          <li><a href="work.arch.html">architecture</a></li>        
           <li><a href="work.eng.html">engineering</a></li>
           <li><a href="work.cs.html">programming</a></li>
           <li><a href="work.misc.html">visual</a></li>
         </ul>
       </div>
-    </nav>
+    </nav> 
 
     <div class="row">
         <!--item start-->     <!--arch/cs-->
@@ -86,17 +86,59 @@
           </div>
         </div>
         <!--item end-->
-        <!--item start-->     <!--arch/eng-->
+        <!--item start-->     <!--eng-->
         <div class="col-md-4 portfolio-item">
-          <div class="hover-bg"> <a href="campsite_struct.html"  data-lightbox-gallery="gallery1">
+          <div class="hover-bg"> <a href="quadruped.html"  data-lightbox-gallery="gallery1">
             <div class="hover-text">
               <div class="overlay-caption">
                 <div class="overlay-content">
-                  <h3>Campsite Kit</h3>
+                  <h3>Mammalian Quadruped</h3>
                 </div>
               </div>
             </div>
-            <img src="images/projects/nomad_campsite/axon plan.jpg" class="img-responsive imclip" alt=""></a>
+            <img src="images/projects/quadruped/full.png" class="img-responsive imclip" alt=""></a>
+          </div>
+        </div>
+        <!--item end-->
+        <!--item start-->     <!--eng-->
+        <div class="col-md-4 portfolio-item">
+          <div class="hover-bg"> <a href="surgical_retractor.html"  data-lightbox-gallery="gallery1">
+            <div class="hover-text">
+              <div class="overlay-caption">
+                <div class="overlay-content">
+                  <h3>Orthopedic Surgical Retractor</h3>
+                </div>
+              </div>
+            </div>
+            <img src="images/projects/surgical_retractor/AAClampV5_10.PNG" class="img-responsive imclip" alt=""></a>
+          </div>
+        </div>
+        <!--item end-->
+        <!--item start-->     <!--cs/eng-->
+        <div class="col-md-4 portfolio-item">
+          <div class="hover-bg"> <a href="machine_learning.html"  data-lightbox-gallery="gallery1">
+            <div class="hover-text">
+              <div class="overlay-caption">
+                <div class="overlay-content">
+                  <h3>Machine Learning</h3>
+                </div>
+              </div>
+            </div>
+            <img src="images/projects/machine_learning/07_96_2470_gt.jpg" class="img-responsive imclip" alt=""></a>
+          </div>
+        </div>
+        <!--item end-->
+        <!--item start-->     <!--cs-->
+        <div class="col-md-4 portfolio-item">
+          <div class="hover-bg"> <a href="parallax.html"  data-lightbox-gallery="gallery1">
+            <div class="hover-text">
+              <div class="overlay-caption">
+                <div class="overlay-content">
+                  <h3>Extended Reality</h3>
+                </div>
+              </div>
+            </div>
+            <img src="images/projects/parallax/still.png" class="img-responsive imclip" alt=""></a>
           </div>
         </div>
         <!--item end-->
@@ -114,93 +156,50 @@
           </div>
         </div>
         <!--item end-->
-        <!--item start-->     <!--arch-->
+        <!--item start-->     <!--eng-->
         <div class="col-md-4 portfolio-item">
-          <div class="hover-bg"> <a href="baseball_clubhouse.html"  data-lightbox-gallery="gallery1">
+          <div class="hover-bg"> <a href="microfluidics.html"  data-lightbox-gallery="gallery1">
             <div class="hover-text">
               <div class="overlay-caption">
                 <div class="overlay-content">
-                  <h3>Little League Clubhouse</h3>
+                  <h3>Microfluidic Experiments</h3>
                 </div>
               </div>
             </div>
-            <img src="images/projects/baseball_clubhouse/sectioncollage1final.jpg" class="img-responsive imclip" alt=""></a>
+            <img src="images/projects/microfluidics/microfluidicsetup.jpg" class="img-responsive imclip" alt=""></a>
           </div>
         </div>
         <!--item end-->
-        <!--item start-->     <!--arch-->
+        <!--item start-->     <!--arch/eng-->
         <div class="col-md-4 portfolio-item">
-          <div class="hover-bg"> <a href="coastal_settlement.html"  data-lightbox-gallery="gallery1">
+          <div class="hover-bg"> <a href="campsite_struct.html"  data-lightbox-gallery="gallery1">
             <div class="hover-text">
               <div class="overlay-caption">
                 <div class="overlay-content">
-                  <h3>Coastal Settlement</h3>
+                  <h3>Campsite Kit</h3>
                 </div>
               </div>
             </div>
-            <img src="images/projects/coastal_settlement/IMG_1191.jpg" class="img-responsive imclip" alt=""></a>
+            <img src="images/projects/nomad_campsite/axon plan.jpg" class="img-responsive imclip" alt=""></a>
           </div>
         </div>
         <!--item end-->
-        <!--item start-->     <!--arch-->
+        <!--item start-->     <!--eng-->
         <div class="col-md-4 portfolio-item">
-          <div class="hover-bg"> <a href="comm_garden.html"  data-lightbox-gallery="gallery1">
+          <div class="hover-bg"> <a href="skateboard.html"  data-lightbox-gallery="gallery1">
             <div class="hover-text">
               <div class="overlay-caption">
                 <div class="overlay-content">
-                  <h3>Community Garden</h3>
+                  <h3>Electric Longboard</h3>
                 </div>
               </div>
             </div>
-            <img src="images/projects/community_garden/comm_garden_small.jpg" class="img-responsive imclip" alt=""></a>
+            <img src="images/projects/skateboard/board_front.jpg" class="img-responsive imclip" alt=""></a>
           </div>
         </div>
         <!--item end-->
-        <!--item start-->     <!--visual/arch-->
-        <div class="col-md-4 portfolio-item">
-          <div class="hover-bg"> <a href="houses.html"  data-lightbox-gallery="gallery1">
-            <div class="hover-text">
-              <div class="overlay-caption">
-                <div class="overlay-content">
-                  <h3>Housing Models</h3>
-                </div>
-              </div>
-            </div>
-            <img src="images/projects/experimentalhousing/5AD8D23E-1D5C-43BF-B89A-C242F86E1889.jpeg" class="img-responsive imclip" alt=""></a>
-          </div>
-        </div>
-        <!--item end-->
-        <!--item start-->     <!--architecture-->
-        <div class="col-md-4 portfolio-item">
-          <div class="hover-bg"> <a href="nature_center.html"  data-lightbox-gallery="gallery1">
-            <div class="hover-text">
-              <div class="overlay-caption">
-                <div class="overlay-content">
-                  <h3>Nature Center</h3>
-                </div>
-              </div>
-            </div>
-            <img src="images/projects/nature_center/IMG_3267.jpg" class="img-responsive imclip" alt=""></a>
-          </div>
-        </div>
-        <!--item end-->
-        <!--item start-->     <!--visual/arch-->
-        <div class="col-md-4 portfolio-item">
-          <div class="hover-bg"> <a href="van.html"  data-lightbox-gallery="gallery1">
-            <div class="hover-text">
-              <div class="overlay-caption">
-                <div class="overlay-content">
-                  <h3>Garden Camper</h3>
-                </div>
-              </div>
-            </div>
-            <img src="images/projects/van/C893012A-0C4B-4233-9551-79BA62B0D535.jpeg" class="img-responsive imclip" alt=""></a>
-          </div>
-        </div>
-        <!--item end-->
-
-
-
+        
+        
     </div>
 
     <!--portfolio end-->
