--- a/work.html
+++ b/work.html
@@ -14,14 +14,14 @@
 
  <!-- jQuery library -->
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
- 
+
  <!-- Latest compiled JavaScript -->
- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> 
+ <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
 <!-- JS smoothstate -->
 <script src="js/jquery.smoothState.min.js"></script>
 <script src="js/js_smooth_transition.js"></script>
-<script type="text/javascript" src="js/SmoothScroll.js"></script> 
+<script type="text/javascript" src="js/SmoothScroll.js"></script>
 <link rel="stylesheet" href="css/keyframes.css">
 <link rel="stylesheet" href="css/pageTransitions.css">
 
@@ -43,16 +43,16 @@
         <a class="navbar-brand" href="index.html">trevor chan</a>
       </div>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="index.html">about</a></li>        
+        <li><a href="index.html">about</a></li>
         <li class="active"><a href="work.html">work</a></li>
         <li><a href="/pdf/TrevorChanCV.pdf" target="_blank">cv</a></li>
       </ul>
     </div>
-  </nav> 
-  <div style="position:fixed; bottom: 20px; right:20px; color: #333; background-color: #fff; 
+  </nav>
+  <!-- <div style="position:fixed; bottom: 20px; right:20px; color: #333; background-color: #fff;
               opacity: .8; z-index: 1000; padding-left: 5px; padding-right: 5px;">
     This website was designed and coded by Trevor Chan
-  </div>
+  </div> -->
 
 
   <!--fade in slide in up transition-->
@@ -63,13 +63,13 @@
       <div class="container-fluid">
         <ul class="nav navbar-nav navbar-lower">
           <li class="active"><a href="work.html">selected</a></li>
-          <li><a href="work.arch.html">architecture</a></li>        
+          <li><a href="work.arch.html">architecture</a></li>
           <li><a href="work.eng.html">engineering</a></li>
           <li><a href="work.cs.html">programming</a></li>
           <li><a href="work.misc.html">visual</a></li>
         </ul>
       </div>
-    </nav> 
+    </nav>
 
     <div class="row">
         <!--item start-->     <!--arch/cs-->
@@ -128,6 +128,20 @@
           </div>
         </div>
         <!--item end-->
+		<!--item start-->     <!--visual/arch-->
+        <div class="col-md-4 portfolio-item">
+          <div class="hover-bg"> <a href="van.html"  data-lightbox-gallery="gallery1">
+            <div class="hover-text">
+              <div class="overlay-caption">
+                <div class="overlay-content">
+                  <h3>Garden Camper</h3>
+                </div>
+              </div>
+            </div>
+            <img src="images/projects/van/C893012A-0C4B-4233-9551-79BA62B0D535.jpeg" class="img-responsive imclip" alt=""></a>
+          </div>
+        </div>
+        <!--item end-->
         <!--item start-->     <!--cs-->
         <div class="col-md-4 portfolio-item">
           <div class="hover-bg"> <a href="parallax.html"  data-lightbox-gallery="gallery1">
@@ -139,6 +153,20 @@
               </div>
             </div>
             <img src="images/projects/parallax/still.png" class="img-responsive imclip" alt=""></a>
+          </div>
+        </div>
+        <!--item end-->
+		<!--item start-->     <!--visual-->
+        <div class="col-md-4 portfolio-item">
+          <div class="hover-bg"> <a href="lunchbox.html"  data-lightbox-gallery="gallery1">
+            <div class="hover-text">
+              <div class="overlay-caption">
+                <div class="overlay-content">
+                  <h3>Lunchbox</h3>
+                </div>
+              </div>
+            </div>
+            <img src="images/projects/lunchbox/lunchbox_small.jpg" class="img-responsive imclip" alt=""></a>
           </div>
         </div>
         <!--item end-->
@@ -156,17 +184,17 @@
           </div>
         </div>
         <!--item end-->
-        <!--item start-->     <!--eng-->
+		<!--item start-->     <!--architecture-->
         <div class="col-md-4 portfolio-item">
-          <div class="hover-bg"> <a href="microfluidics.html"  data-lightbox-gallery="gallery1">
+          <div class="hover-bg"> <a href="nature_center.html"  data-lightbox-gallery="gallery1">
             <div class="hover-text">
               <div class="overlay-caption">
                 <div class="overlay-content">
-                  <h3>Microfluidic Experiments</h3>
+                  <h3>Nature Center</h3>
                 </div>
               </div>
             </div>
-            <img src="images/projects/microfluidics/microfluidicsetup.jpg" class="img-responsive imclip" alt=""></a>
+            <img src="images/projects/nature_center/IMG_3267.jpg" class="img-responsive imclip" alt=""></a>
           </div>
         </div>
         <!--item end-->
@@ -198,8 +226,148 @@
           </div>
         </div>
         <!--item end-->
-        
-        
+		<!--item start-->     <!--cs-->
+        <div class="col-md-4 portfolio-item">
+          <div class="hover-bg"> <a href="web_portfolio.html"  data-lightbox-gallery="gallery1">
+            <div class="hover-text">
+              <div class="overlay-caption">
+                <div class="overlay-content">
+                  <h3>Website Portfolio</h3>
+                </div>
+              </div>
+            </div>
+            <img src="images/projects/website/Screen Shot 2020-10-04 at 12.02.59 AM.png" class="img-responsive imclip" alt=""></a>
+          </div>
+        </div>
+        <!--item end-->
+		<!--item start-->     <!--arch-->
+        <div class="col-md-4 portfolio-item">
+          <div class="hover-bg"> <a href="baseball_clubhouse.html"  data-lightbox-gallery="gallery1">
+            <div class="hover-text">
+              <div class="overlay-caption">
+                <div class="overlay-content">
+                  <h3>Little League Clubhouse</h3>
+                </div>
+              </div>
+            </div>
+            <img src="images/projects/baseball_clubhouse/sectioncollage1final.jpg" class="img-responsive imclip" alt=""></a>
+          </div>
+        </div>
+        <!--item end-->
+		<!--item start-->     <!--arch-->
+        <div class="col-md-4 portfolio-item">
+          <div class="hover-bg"> <a href="coastal_settlement.html"  data-lightbox-gallery="gallery1">
+            <div class="hover-text">
+              <div class="overlay-caption">
+                <div class="overlay-content">
+                  <h3>Coastal Settlement</h3>
+                </div>
+              </div>
+            </div>
+            <img src="images/projects/coastal_settlement/IMG_1191.jpg" class="img-responsive imclip" alt=""></a>
+          </div>
+        </div>
+        <!--item end-->
+		<!--item start-->     <!--arch-->
+        <div class="col-md-4 portfolio-item">
+          <div class="hover-bg"> <a href="comm_garden.html"  data-lightbox-gallery="gallery1">
+            <div class="hover-text">
+              <div class="overlay-caption">
+                <div class="overlay-content">
+                  <h3>Community Garden</h3>
+                </div>
+              </div>
+            </div>
+            <img src="images/projects/community_garden/comm_garden_small.jpg" class="img-responsive imclip" alt=""></a>
+          </div>
+        </div>
+        <!--item end-->
+        <!--item start-->     <!--eng-->
+        <div class="col-md-4 portfolio-item">
+          <div class="hover-bg"> <a href="microfluidics.html"  data-lightbox-gallery="gallery1">
+            <div class="hover-text">
+              <div class="overlay-caption">
+                <div class="overlay-content">
+                  <h3>Microfluidic Experiments</h3>
+                </div>
+              </div>
+            </div>
+            <img src="images/projects/microfluidics/microfluidicsetup.jpg" class="img-responsive imclip" alt=""></a>
+          </div>
+        </div>
+        <!--item end-->
+		<!--item start-->     <!--visual/arch-->
+        <div class="col-md-4 portfolio-item">
+          <div class="hover-bg"> <a href="houses.html"  data-lightbox-gallery="gallery1">
+            <div class="hover-text">
+              <div class="overlay-caption">
+                <div class="overlay-content">
+                  <h3>Housing Models</h3>
+                </div>
+              </div>
+            </div>
+            <img src="images/projects/experimentalhousing/5AD8D23E-1D5C-43BF-B89A-C242F86E1889.jpeg" class="img-responsive imclip" alt=""></a>
+          </div>
+        </div>
+        <!--item end-->
+		<!--item start-->     <!--visual-->
+        <div class="col-md-4 portfolio-item">
+          <div class="hover-bg"> <a href="globe.html"  data-lightbox-gallery="gallery1">
+            <div class="hover-text">
+              <div class="overlay-caption">
+                <div class="overlay-content">
+                  <h3>Speculative Globe</h3>
+                </div>
+              </div>
+            </div>
+            <img src="images/projects/misc_visual/globe/IMG_0634.jpg" class="img-responsive imclip" alt=""></a>
+          </div>
+        </div>
+        <!--item end-->
+		<!--item start-->     <!--visual-->
+        <div class="col-md-4 portfolio-item">
+          <div class="hover-bg"> <a href="log.html"  data-lightbox-gallery="gallery1">
+            <div class="hover-text">
+              <div class="overlay-caption">
+                <div class="overlay-content">
+                  <h3>The Log</h3>
+                </div>
+              </div>
+            </div>
+            <img src="images/projects/misc_visual/log/cropped.jpg" class="img-responsive imclip" alt=""></a>
+          </div>
+        </div>
+        <!--item end-->
+		<!--item start-->     <!--visual-->
+        <div class="col-md-4 portfolio-item">
+          <div class="hover-bg"> <a href="void.html"  data-lightbox-gallery="gallery1">
+            <div class="hover-text">
+              <div class="overlay-caption">
+                <div class="overlay-content">
+                  <h3>Dominant Void</h3>
+                </div>
+              </div>
+            </div>
+            <img src="images/projects/misc_visual/dominantvoid/IMG_2962.jpg" class="img-responsive imclip" alt=""></a>
+          </div>
+        </div>
+        <!--item end-->
+		<!--item start-->     <!--visual-->
+        <div class="col-md-4 portfolio-item">
+          <div class="hover-bg"> <a href="rand.html"  data-lightbox-gallery="gallery1">
+            <div class="hover-text">
+              <div class="overlay-caption">
+                <div class="overlay-content">
+                  <h3>Random Projects</h3>
+                </div>
+              </div>
+            </div>
+            <img src="images/projects/misc_visual/rand/Screen Shot 2020-10-08 at 10.47.09 PM.png" class="img-responsive imclip" alt=""></a>
+          </div>
+        </div>
+        <!--item end-->
+
+
     </div>
 
     <!--portfolio end-->
