--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <p>
         Trevor Chan is an engineer and designer from Oakland, CA.
         He obtained his bachelor's degrees in mechanical engineering and architecture from Yale in May 2020.
-        He currently investigates cancer cell mechanobiology in Yale's Mak Research Group.
+        He is currently a PhD candidate in bioengineering at the University of Pennsylvania.
       </p>
       <p>
         Trevor's projects to-date span a wide range of disciplines.
@@ -92,7 +92,7 @@
         Contact
       </h3>
       <p>phone: (510) 999 2031</p>
-      <p>email: trevor.chan@yale.edu</p>
+      <p>email: trevorjacksonchan@gmail.com</p>
       <p>github: <a href="https://github.com/trevor-chan">trevor-chan</a> </p>
     </div>
 
