Much needed updates, projects and image thumbnails added

--- a/index.html
+++ b/index.html
@@ -89,6 +89,13 @@
     </div>
     <div class="centerbasic" style="margin-top:50px;">
       <h3>
+        Also check out
+      </h3>
+      <p>github: <a href="https://ericryanchan.github.io/about.html">Eric Chan</a> </p>
+      <p>github: <a href="https://matthew-a-chan.github.io/website/about/about.html">Matthew Chan</a> </p>
+    </div>
+    <div class="centerbasic" style="margin-top:50px;">
+      <h3>
         Contact
       </h3>
       <p>phone: (510) 999 2031</p>
