--- a/work.html
+++ b/work.html
@@ -96,7 +96,7 @@
                 </div>
               </div>
             </div>
-            <img src="images/projects/quadruped/full.png" class="img-responsive imclip" alt=""></a>
+            <img src="images/projects/quadruped/full_thumbnail.png" class="img-responsive imclip" alt=""></a>
           </div>
         </div>
         <!--item end-->
@@ -116,11 +116,11 @@
         <!--item end-->
         <!--item start-->     <!--cs/eng-->
         <div class="col-md-4 portfolio-item">
-          <div class="hover-bg"> <a href="machine_learning.html"  data-lightbox-gallery="gallery1">
+          <div class="hover-bg"> <a href="melanoma.html"  data-lightbox-gallery="gallery1">
             <div class="hover-text">
               <div class="overlay-caption">
                 <div class="overlay-content">
-                  <h3>Machine Learning</h3>
+                  <h3>Melanoma Research</h3>
                 </div>
               </div>
             </div>
@@ -138,7 +138,7 @@
                 </div>
               </div>
             </div>
-            <img src="images/projects/van/C893012A-0C4B-4233-9551-79BA62B0D535.jpeg" class="img-responsive imclip" alt=""></a>
+            <img src="images/projects/van/C893012A-0C4B-4233-9551-79BA62B0D535_thumbnail.jpeg" class="img-responsive imclip" alt=""></a>
           </div>
         </div>
         <!--item end-->
@@ -236,7 +236,7 @@
                 </div>
               </div>
             </div>
-            <img src="images/projects/website/Screen Shot 2020-10-04 at 12.02.59 AM.png" class="img-responsive imclip" alt=""></a>
+            <img src="images/projects/website/Screen Shot 2020-10-04 at 12.02.59 AM_thumbnail.jpg" class="img-responsive imclip" alt=""></a>
           </div>
         </div>
         <!--item end-->
@@ -250,7 +250,7 @@
                 </div>
               </div>
             </div>
-            <img src="images/projects/baseball_clubhouse/sectioncollage1final.jpg" class="img-responsive imclip" alt=""></a>
+            <img src="images/projects/baseball_clubhouse/IMG_3403-2_thumbnail.jpg" class="img-responsive imclip" alt=""></a>
           </div>
         </div>
         <!--item end-->
@@ -264,7 +264,7 @@
                 </div>
               </div>
             </div>
-            <img src="images/projects/coastal_settlement/IMG_1191.jpg" class="img-responsive imclip" alt=""></a>
+            <img src="images/projects/coastal_settlement/IMG_1191_thumbnail.jpg" class="img-responsive imclip" alt=""></a>
           </div>
         </div>
         <!--item end-->
@@ -278,7 +278,7 @@
                 </div>
               </div>
             </div>
-            <img src="images/projects/community_garden/comm_garden_small.jpg" class="img-responsive imclip" alt=""></a>
+            <img src="images/projects/community_garden/IMG_1823-Edit_thumbnail.jpg" class="img-responsive imclip" alt=""></a>
           </div>
         </div>
         <!--item end-->
@@ -306,7 +306,7 @@
                 </div>
               </div>
             </div>
-            <img src="images/projects/experimentalhousing/5AD8D23E-1D5C-43BF-B89A-C242F86E1889.jpeg" class="img-responsive imclip" alt=""></a>
+            <img src="images/projects/experimentalhousing/5AD8D23E-1D5C-43BF-B89A-C242F86E1889_thumbnail.jpeg" class="img-responsive imclip" alt=""></a>
           </div>
         </div>
         <!--item end-->
@@ -320,7 +320,7 @@
                 </div>
               </div>
             </div>
-            <img src="images/projects/misc_visual/globe/IMG_0634.jpg" class="img-responsive imclip" alt=""></a>
+            <img src="images/projects/misc_visual/globe/globe_small.jpg" class="img-responsive imclip" alt=""></a>
           </div>
         </div>
         <!--item end-->
@@ -334,7 +334,7 @@
                 </div>
               </div>
             </div>
-            <img src="images/projects/misc_visual/log/cropped.jpg" class="img-responsive imclip" alt=""></a>
+            <img src="images/projects/misc_visual/log/cropped_thumbnail.jpg" class="img-responsive imclip" alt=""></a>
           </div>
         </div>
         <!--item end-->
@@ -348,7 +348,7 @@
                 </div>
               </div>
             </div>
-            <img src="images/projects/misc_visual/dominantvoid/IMG_2962.jpg" class="img-responsive imclip" alt=""></a>
+            <img src="images/projects/misc_visual/dominantvoid/IMG_2962_thumbnail.jpg" class="img-responsive imclip" alt=""></a>
           </div>
         </div>
         <!--item end-->
@@ -362,7 +362,7 @@
                 </div>
               </div>
             </div>
-            <img src="images/projects/misc_visual/rand/Screen Shot 2020-10-08 at 10.47.09 PM.png" class="img-responsive imclip" alt=""></a>
+            <img src="images/projects/misc_visual/rand/Screen Shot 2020-10-08 at 10.47.09 PM_thumbnail.png" class="img-responsive imclip" alt=""></a>
           </div>
         </div>
         <!--item end-->
