added publications page

--- a/work.selected.html
+++ b/work.selected.html
@@ -45,6 +45,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="index.html">about</a></li>        
         <li class="active"><a href="work.html">work</a></li>
+        <li><a href="publications.html">publications</a></li>
         <li><a href="/pdf/TrevorChanCV.pdf" target="_blank">cv</a></li>
       </ul>
     </div>
