--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
       <h3>
         Also check out
       </h3>
-      <p>github: <a href="https://ericryanchan.github.io/about.html">Eric Chan</a> </p>
-      <p>github: <a href="https://matthew-a-chan.github.io/website/about/about.html">Matthew Chan</a> </p>
+      <p><a href="https://ericryanchan.github.io/about.html">Eric Chan</a> </p>
+      <p><a href="https://matthew-a-chan.github.io/website/about/about.html">Matthew Chan</a> </p>
     </div>
     <div class="centerbasic" style="margin-top:50px;">
       <h3>
