--- a/lunchbox.html
+++ b/lunchbox.html
@@ -42,12 +42,13 @@
         <a class="navbar-brand" href="index.html">trevor chan</a>
       </div>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="index.html">about</a></li>        
+        <li><a href="index.html">about</a></li>
         <li class="active"><a href="work.html">work</a></li>
-        <li><a href="/pdf/TrevorChanCV.pdf" download>cv</a></li>
+        <li><a href="publications.html">publications</a></li>
+        <li><a href="/pdf/TrevorChanCV.pdf" target="_blank">cv</a></li>
       </ul>
     </div>
-  </nav> 
+  </nav>
   
   <div class="m-right-panel m-page scene_element scene_element--fadeinup">
     <!-- content -->
